# GenetaVO

./: CMakeLists.txt  GenetaSLAM.cpp  GenetaSLAM.h  README.md
app/: CMakeLists.txt  run.cpp
config/: config.yaml
include/myslam/: algorithm.h  backend.h  camera.h  common.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2o_param.h  loopclosing.h  map.h  mappoint.h  viewer.h
src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp
test/: CMakeLists.txt  mytest.cpp
